# akari-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  bot.py  console.py  deploy.js  faq.md  index.md  mkdocs.yml  package.json  pyproject.toml  requirements.txt  start
.github/ISSUE_TEMPLATE/: add_new_group.yaml  blocklist_appeal.yml
bots/aiocqhttp/: bot.py  message.py  message_guild.py
bots/aiogram/: bot.py  message.py
bots/discord/: bot.py  message.py
bots/matrix/: bot.py
config/: __init__.py
core/: component.py  dirty_check.py  logger.py  tos.py
core/console/: template.py
core/loader/: __init__.py
core/parser/: command.py  message.py
core/utils/: __init__.py  bot.py  http.py  image_table.py  message.py  tasks.py
database/: __init__.py  local.py  orm.py  tables.py
docs/: .gitignore  README.md  index.md  mkdocs.yml  permission.md  setup.md
docs/assets/: b30.jfif  wdljt.jfif
docs/custom/: custom.css
docs/dev/: implementation.md  new_module.md  web_render.md
docs/docs/: index.md
docs/modules/: b30.md  core.md  github.md  help.md  index.md  minecraft_news.md  server.md  weekly.md
docs/policy/: privacy.md
docs/rss/: mcv_rss.md
example/new_module/: __init__.py
locales/: zh_cn.json
modules/_dungeons/: __init__.py  daily_trials.py
modules/arcaea/: __init__.py  dbutils.py  drawb30img.py  drawsongimg.py  getb30.py  getb30_official.py  info.py  initialize.py
modules/ask/: __init__.py  agent.py
modules/bugtracker/: __init__.py  bugtracker.py
modules/chemical_code/: __init__.py
modules/core/: __init__.py  (+2 more)
(+84 files in other folders)
