[tool.poetry]
name = "akari-bot"
version = "4.0.1-rc.1"
description = ""
authors = [
    "OasisAkari <oasisakari@teahou.se>",
    "Dianliang233 <dianliang@teahou.se>",
    "DoroWolf <dorowolf@tehou.se>",
    "nullcat <null@teahou.se>",
    "_LittleC_ <i@ltlec.com>",
]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.2.0"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.11.1"
psutil = "^5.9.1"
gql = "^3.0.0"
filetype = "^1.1.0"
SQLAlchemy = "^1.4.39"
APScheduler = "^3.9.1"
aioconsole = "^0.5.0"
aiogram = "^2.21"
ujson = "^5.4.0"
PyMySQL = "^1.0.2"
py-cord = "2.0.0b7"
tenacity = "^8.0.1"
aiocqhttp = "^1.4.3"
tabulate = "^0.8.10"
feedparser = "^6.0.10"
ffmpy = "^0.3.0"
google-play-scraper = "^1.2.0"
py-cpuinfo = "^8.0.0"
aiofile = "^3.7.4"
loguru = "^0.6.0"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
pre-commit = "^2.20.0"
black = "^22.6.0"
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
